--- a/src/Pages/404/error.css
+++ b/src/Pages/404/error.css
@@ -3,7 +3,7 @@
     top: 73px;
     width: 100%;
     height: 100vh;
-    background-image: url("../../../public/img/assets/404.jpg");
+    background-image: url("../../../public/img/404.jpg");
     background-position: center;
     background-size: contain;
     background-color: black;
