--- a/src/Pages/New/new.css
+++ b/src/Pages/New/new.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: url("../../../public/img/assets/galaxy.jpg");
+  background-image: url("../../../public/img/galaxy.jpg");
   background-position: center;
   background-size: cover;
   width: 100%;
