--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,6 @@
     -moz-transition: all .8s;
     -ms-transition: all .8s;
     -o-transition: all .8s;
-    font-family: sans-serif;
+    font-family: serif;
 }
 
